tests/testfiles/validated/invalid_programs/614_shit_outside_function.c
int foo(int a, int b); 

int main (){

  int goo(), hoo(int a, int b);

  int a=a=a=a=a=a=a=a;
  int foo (int a, int b){
    return a+b+hoo     (5,4*6*a);
  }
  int y = foo((a=3),10); 
  return y; 
}

if (true) {
  int b = 3;
}
while 1 {int a = 2; return 3;}
int a=0,b=a,c;
a = 2;
a += 1;
int e = a;
int d = 1+3;
int b=a=c=b=b=b;